style.css
@font-face {
  font-family: Racing;
  src: url(racing_sans_one_regular.ttf);
}

/* This first section is all for setting up the overall layout of the content
 * for both mobile and desktop. Editing these properties could lead to large
 * changes in the general layout. */

html {
  --color-green: rgb(0, 153, 0);
  --color-black: rgb(22, 22, 22);
  --color-gray: rgb(110, 110, 110);
  --color-light-gray: rgb(190, 190, 190);
  --color-white: rgb(255, 255, 255);

  --dropdown-base-offset: 9.63em;
}

body {
  margin: 0px;
  overflow: hidden;
  overflow-x: hidden;
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  grid-template-rows: 100%;
  justify-content: center;
  background-color: var(--color-black);
}

div.left_accent_grid {
  display: grid;
  grid-template-columns: auto 4em;
}
div.right_accent_grid {
  display: grid;
  grid-template-columns: 4em auto;
}
div.accent {
  background-color: var(--color-light-gray);
}

div.main_grid {
  width: 70em;
  height: 100%;
  grid-column-start: 2;
  grid-column-end: 3;
  display: grid;
  grid-template-columns: 15em 55em;
  grid-template-rows: 4em auto;
  border-left: 1em solid var(--color-gray);
  border-right: 1em solid var(--color-gray);
}

div.header_container {
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: var(--color-green);
  display: grid;
  grid-template-columns: 1fr auto 1fr;
}
div.header_dropdown_container {
  width: calc(100% - 2em);
  height: calc(100% - 2em);
  padding: 1em;
  display: flex;
  justify-content: flex-start;
}
div.header_dropdown svg path,
div.header_dropdown {
  fill: var(--color-black);
  transition: 0.03s;
  transition-timing-function: ease-out;
}
div.header_dropdown:hover svg path,
div.header_dropdown:hover {
  fill: var(--color-light-gray);
}
div.header_dropdown {
  display: none;
}
div.header_text {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2em;
  font-family: Racing, Impact, sans-serif;
  color: var(--color-black);
  user-select: none;
}

div.sidebar_grid {
  position: relative;
  z-index: 0;
  font-size: 1.3em;
  background-color: var(--color-black);
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;

  --element-count: 4;
  --buffer-height: 1em;
  --element-height: 1.6em;
  --dropdown-relative-offset: calc(var(--buffer-height) +
    (var(--element-count) * var(--element-height)));
  display: grid;
  grid-template-rows: var(--buffer-height)
    repeat(var(--element-count), var(--element-height));
}
a.sidebar_element {
  display: flex;
  align-items: center;
  padding-left: 1.5em;
  font-family: "Arial Black", Gadget, sans-serif;
  text-decoration-line: none;
  color: var(--color-light-gray);
  background-color: var(--color-black);
  transition: 0.03s;
  transition-timing-function: ease-out;
  user-select: none;
}
a.sidebar_element:hover {
  padding-left: 2.0em;
  color: var(--color-black);
  background-color: var(--color-gray);
  cursor: pointer;
}

div.content_container {
  position: relative;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 3;
  border-left: 1em solid var(--color-gray);
  background-color: var(--color-white);
  overflow-y: scroll;
}

@media screen and (max-width: 70em) {
  body {
    overflow-y: scroll;
    background-color: var(--color-white);
    display: block;
    width: 100%;
    height: 100%;
  }
  div.main_grid {
    width: 100%;
    border: none;
    grid-template-columns: 100%;
    grid-template-rows: 4em var(--dropdown-base-offset) auto;
  }

  div.header_container {
    grid-row-start: 1;
    grid-row-end: 2;
  }
  div.header_dropdown {
    display: block;
  }

  div.sidebar_grid {
    grid-row-start: 2;
    grid-row-end: 3;
    bottom: var(--dropdown-relative-offset);
  }

  div.content_container {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 3;
    grid-row-end: 4;
    border: none;
    overflow: visible;
    bottom: var(--dropdown-base-offset);
  }
}

/* This section is used to specify the style of the things contained within
 * the actual content of the page. This includes things like heading style,
 * line spacing, etc. Editing pieces of this should not have any effect on the
 * general layout. */

div.page_content {
  font-size: 1.075em;
  font-family: Arial;
  padding-left: 2em;
  padding-right: 2em;
  line-height: 1.4em;
  text-align: justify;
}

h1 {
  font-size: 1.5em;
  font-family: Arial;
  font-weight: normal;
  font-style: italic;
  text-indent: 1em;
}

h3 {
  border-bottom: 2px solid var(--color-gray);
  font-size: 1.5em;
  font-family: Arial;
  text-align: center;
  font-weight: normal;
  font-style: italic;
  padding-bottom: 0.2em;
}

